--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   <meta property="og:url" content="https://www.try-claritoxpro.us/cp-tsl">
   <meta property="og:type" content="website">
   <link rel="stylesheet" media="screen" href="assets/lander.css">
-  <link rel="canonical" href="cp-tsl.html">
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/all.css">
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
   <link
@@ -2429,7 +2428,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: center; font-size: 20px; color: rgb(255, 255, 255);" data-bold="inherit"
-                  data-gramm="false" contenteditable="false">Copyright © 2023 - Claritox Pro                           
+                  data-gramm="false" contenteditable="false">Copyright © 2025 - Claritox Pro                           
                                                                      <a href="privacy-policy1663052725599.html"
                     id="link-77814" class target="_self" rel="noopener noreferrer"
                     style="color: rgb(208, 208, 208);">Privacy Policy</a> | <a href="disclaimer1663052725895.html"
@@ -2488,13 +2487,13 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: center; font-size: 18px; color: rgb(255, 255, 255);" data-bold="inherit"
-                  data-gramm="false" contenteditable="false">     Copyright © 2023 - Claritox Pro                       
-                                                                 <a href="privacy-policy.html" class
-                    target="_self" rel="noopener noreferrer" style="color: rgb(208, 208, 208);" id="link-99929">Privacy
+                  data-gramm="false" contenteditable="false">     Copyright © 2025 - Claritox Pro                       
+                                                                 <a href="privacy-policy.html" class target="_self"
+                    rel="noopener noreferrer" style="color: rgb(208, 208, 208);" id="link-99929">Privacy
                     Policy</a> | <a href="disclaimer.html" id="link-50676" class target="_self"
                     rel="noopener noreferrer" style="color: rgb(208, 208, 208);">Disclaimer </a>| <a
-                    href="terms-and-conditions.html" id="link-62986" class target="_self"
-                    rel="noopener noreferrer" style="color: rgb(208, 208, 208);">Terms</a>
+                    href="terms-and-conditions.html" id="link-62986" class target="_self" rel="noopener noreferrer"
+                    style="color: rgb(208, 208, 208);">Terms</a>
                   <div>
                     <br>
                     <div>FDA Compliance
