--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
       display: none
     }
   </style>
-  <link rel="icon" type="image/png" href="hosted/images/17/cb1027300341f09d1fb16d011608bc/claritox-pro.png">
-  </link>
+  <link rel="alternate" href="https://claritox-pro.vercel.app/" hreflang="en-us" />
+  <link rel="alternate" href="https://claritox-pro.vercel.app/" hreflang="x-default" />
+  <meta name="robots" content="index, follow">
   <meta name="msvalidate.01" content="D706A9CDA41743E14DA57A6DCB2DDAFF" />
   <meta name="google-site-verification" content="jZ-4xgvm4jkQtqSJ2rjz3NtQHXHVf1xCU-st2WTnuJI" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
