--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -332,8 +332,8 @@
     <div class="footer-links">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="/privacy-policy.html">Privacy Policy</a></li>
         <li><a href="/terms-and-conditions.html">Terms & Conditions</a></li>
+        <li><a href="/disclaimer.html">Disclaimer</a></li>
       </ul>
     </div>
     <p>&copy; 2025 Your Website Name. All rights reserved.</p>
