--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -440,7 +440,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-        <li><a href="/terms-and-conditions.html">Terms & Conditions</a></li>
+        <li><a href="/disclaimer.html">Disclaimer</a></li>
       </ul>
     </div>
     <p>&copy; 2025 Your Website Name. All rights reserved.</p>
